# forex-backtester

./: .git-hooks-commit-msg  .tmuxinator.yml  CLAUDE.md  Makefile  README.md  eurusd.csv  forex_analysis.ipynb  main.ipynb  old_backtesting.ipynb  pyproject.toml  utils.py
data/: eurusd.csv  eurusd_2026_1m_confirmation_candle.csv
labs/: 1m_confirmation_candle.ipynb  1m_confirmation_candle_direction.ipynb  correlations.ipynb  doubles.ipynb  ema.ipynb  export.ipynb  hours.ipynb  optimizer.ipynb  singles.ipynb  tables.ipynb  weekdays.ipynb
new/: eurusd.csv  lab.ipynb  utils.py
old/: lab.ipynb
research/: RESULTS.md  edge_finder.py
tests/: __init__.py  ema.py  hours.py  test_confirmation_candle.py  test_direction.py  test_doubles.py  test_ema.py  test_hours.py  test_singles.py  test_weekdays.py
utils/: __init__.py  charts.py  confirmation_candle.py  correlations.py  direction.py  doubles.py  ema.py  export.py  hours.py  optimizer.py  singles.py  tables.py  weekdays.py
