[tool.poetry]
name = "forex-backtester"
version = "0.1.0"
description = ""
authors = ["Remigijus Jarmalavičius <remigijus@jarmalavicius.lt>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.1.1"
pandas = "^2.3.2"
numpy = "^2.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
