[tool.poetry]
name = "forex-backtester"
version = "0.1.0"
description = ""
authors = ["Remigijus Jarmalavičius <remigijus@jarmalavicius.lt>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.1.1"
pandas = "^2.3.2"
numpy = "^2.3.2"
matplotlib = "^3.10.6"


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.1"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
